--- a/src/design/plone/theme/theme/sass/components/plone/_portalMessage.scss
+++ b/src/design/plone/theme/theme/sass/components/plone/_portalMessage.scss
@@ -4,6 +4,7 @@
 
     &.info {
         @extend .alert-info;
+        color: #004d73;
 
         span a {
             @extend .btn, .btn-info, .btn-xs;
@@ -13,9 +14,13 @@
         }
     }
     &.warning {
-        @extend .alert-warning;
+        background-color: #fdfbee;
+        color: #eacb0c;
+        border-color: #eebbbb;
     }
     &.error {
-        @extend .alert-danger;
+        background-color: #ffe6e6;
+        color: #a00000;
+        border-color: #eebbbb;
     }
 }
